--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+
+
     <name>filtro</name>
     <description>Filtro org.fransis.digitales.core.FIR</description>
 
@@ -21,6 +23,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
+        <start-class>org.fransis.digitales.FiltroApplication</start-class>
     </properties>
 
     <dependencies>
